--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "standard": "^10.0.3",
     "the-noun-project": "^2.0.1"
   },
   "engines": {
