--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "standard": "^10.0.3",
     "the-noun-project": "^2.0.1"
